--- a/.github/workflows/os_versions.yml
+++ b/.github/workflows/os_versions.yml
@@ -12,18 +12,18 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os-version }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12"]
+        os-version: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python "3.12"
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.12"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
