--- a/.github/workflows/Codecov.yml
+++ b/.github/workflows/Codecov.yml
@@ -25,7 +25,8 @@ jobs:
         python -m pip install .[dev]
     - name: Run Codecov
       run: |
-        pytest --cov-config=.coveragerc --cov=./ci_course --cov-report=xml
+        pytest --cov-config=.coveragerc --cov=./ci_course --cov-branch --cov-report=xml
+        cat coverage.xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
